--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,17 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorPaleSand">#FAF7F0</color>
+    <color name="colorIce">#E5E0FF</color>
+    <color name="colorOcean">#8EA7E9</color>
+    <color name="colorDeepOcean">#7286D3</color>
+
+    <color name="colorSoftLilac">#F4EEFF</color>
+    <color name="colorLavenderMist">#DCD6F7</color>
+    <color name="colorMyrtleFlower">#A6B1E1</color>
+    <color name="colorValiantViolet">#424874</color>
+
+    <color name="colorPumpingSpice">#F5424E</color>
+
 </resources>
