--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -47,7 +47,7 @@
                 tools:ignore="ImageContrastCheck" />
 
             <ImageView
-                android:id="@+id/img_size"
+                android:id="@+id/img_height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@+id/img_mountain"
@@ -80,14 +80,14 @@
                 app:layout_constraintTop_toTopOf="@+id/img_location" />
 
             <TextView
-                android:id="@+id/tv_size"
+                android:id="@+id/tv_height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textColor="@color/colorPaleSand"
-                app:layout_constraintBottom_toBottomOf="@+id/img_size"
-                app:layout_constraintStart_toEndOf="@+id/img_size"
-                app:layout_constraintTop_toTopOf="@+id/img_size" />
+                app:layout_constraintBottom_toBottomOf="@+id/img_height"
+                app:layout_constraintStart_toEndOf="@+id/img_height"
+                app:layout_constraintTop_toTopOf="@+id/img_height" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
