--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -28,6 +28,7 @@
                 android:id="@+id/img_mountain"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:layout_marginStart="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -38,10 +39,9 @@
                 android:id="@+id/img_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.72"
-                app:layout_constraintStart_toStartOf="@+id/img_mountain"
+                android:layout_marginTop="4dp"
+                app:layout_constraintBottom_toTopOf="@+id/tv_name"
+                app:layout_constraintStart_toEndOf="@+id/img_mountain"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/baseline_location_on_24"
                 tools:ignore="ImageContrastCheck" />
@@ -50,8 +50,11 @@
                 android:id="@+id/img_height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@+id/img_mountain"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.6"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_location"
                 app:srcCompat="@drawable/baseline_expand_24" />
 
             <TextView
@@ -72,11 +75,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textStyle="italic"
                 android:textColor="@color/colorPaleSand"
+                android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="@+id/img_location"
                 app:layout_constraintStart_toEndOf="@+id/img_location"
-                app:layout_constraintStart_toStart="@+id/img_location"
                 app:layout_constraintTop_toTopOf="@+id/img_location" />
 
             <TextView
@@ -88,6 +90,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/img_height"
                 app:layout_constraintStart_toEndOf="@+id/img_height"
                 app:layout_constraintTop_toTopOf="@+id/img_height" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
